--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ override.tf.json
 *_override.tf.json
 
 *.example
+.DS_Store
 
 # Include override files you do wish to add to version control using negated pattern
 #
