--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ override.tf.json
 
 *.example
 *.tfvars
+.terraform.lock.hcl
 .DS_Store
 
 # Include override files you do wish to add to version control using negated pattern
